Fix navbar (#17)
* Have image pull from absolute url

* Made navbar hidden under normal cirumstances
Implemented proper fadein/fadeout

* Add navbar.js script to header.html
Removed script tag from navbar.html

* Add script back to navbar.html

* add thing i shouldt've removed

* move nav js script

* remove staic scripts

* Removed unnecessary parameters from keepContent

* Fixed item blocks fading away even on hover

* added style modifications (#20)

* added style modifications

* Reworked js to work with responsive header

* Run prettier

* Removed unneeded parameters

* formatted

* fixed block centering style

--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -1,5 +1,6 @@
 // Corresponds to the number of elements in /data/routes
 $navItemsLength: 4;
+$navNumOfItemBlocks: 4;
 
 .nav {
   color: white;
@@ -33,12 +34,40 @@ $navItemsLength: 4;
     max-width: $page-width;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+
+    &-items {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      &-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 33vw;
+      }
+    }
+
+    &-item {
+      height: 100%;
+    }
+
+    &-dropdowns {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
     a {
       color: inherit;
       display: block;
       padding: 10px 25px;
+      padding-right: 0;
       font-size: 105%;
       img {
         width: 250px;
@@ -48,12 +77,10 @@ $navItemsLength: 4;
     }
   }
 }
-li {
-  display: inline-block !important;
-}
 
 .item {
   display: inline;
+  height: 30px;
   &:hover {
     cursor: pointer;
   }
@@ -63,21 +90,15 @@ li {
   animation-name: out;
   animation-duration: 500ms;
   animation-fill-mode: forwards;
+  user-select: none;
   text-align: center;
   display: inline-block;
 }
 
-.item:hover .arrow {
+.item:hover + .arrow {
   animation-name: in;
   animation-duration: 500ms;
   animation-fill-mode: forwards;
-}
-
-.arrow:hover {
-  animation-name: in;
-  animation-duration: 500ms;
-  animation-fill-mode: forwards;
-  cursor: pointer;
 }
 
 @keyframes in {
@@ -100,85 +121,103 @@ li {
   }
 }
 
-.spacer {
-  width: 100%;
-  height: 195px;
-}
-
 .actual_content {
-  color: black;
+  color: white;
   position: fixed;
-  -webkit-transition: all 600ms ease-out;
-  -moz-transition: all 600ms ease-out;
-  -o-transition: all 600ms ease-out;
-  -ms-transition: all 600ms ease-out;
-  transition: all 600ms ease-out;
-  margin-top: 275px;
-  margin-left: -325px;
+  display: none;
+  justify-content: space-between;
+  width: 100%;
+  // margin-top: 5rem;
   opacity: 0;
   z-index: 1;
+
+  a {
+    margin-top: 0.7rem;
+    width: 100%;
+  }
 
   &:hover {
     z-index: 3 !important;
     opacity: 1;
+    margin-top: 0px;
   }
 }
 
-#dormant_content {
-  position: fixed;
-  width: 101%;
-  height: 200px;
-  margin-top: 275px;
-  margin-left: -450px;
-  z-index: 2;
-}
-
-@for $i from 1 through $navItemsLength {
-  #item#{$i}:hover ~ {
-    #actual_content#{$i} {
-      z-index: 3 !important;
-      -webkit-transition: all 400ms ease-in;
-      -moz-transition: all 400ms ease-in;
-      -o-transition: all 400ms ease-in;
-      -ms-transition: all 400ms ease-in;
-      transition: all 400ms ease-in;
-      opacity: 1;
-      display: block;
+@for $i from 1 through $navNumOfItemBlocks {
+  .item_block#{$i} {
+    -webkit-transition: all 500ms ease-out;
+    -moz-transition: all 500ms ease-out;
+    -o-transition: all 500ms ease-out;
+    -ms-transition: all 500ms ease-out;
+    transition: all 500ms ease-out;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 1px;
+    border-color: #921c06;
+    border-width: 2px;
+    border-style: solid;
+    &:hover {
+      transform: scale(1.01);
+      box-shadow: 0 0 3px #515151;
     }
   }
 }
 
-.item_block {
-  -webkit-transition: all 500ms ease-out;
-  -moz-transition: all 500ms ease-out;
-  -o-transition: all 500ms ease-out;
-  -ms-transition: all 500ms ease-out;
-  transition: all 500ms ease-out;
-  display: grid;
-  grid-template-columns: 150px 150px;
-  width: 300px;
-  height: 150px;
-  margin-right: 50px;
-  border-color: black;
-  border-width: 2px;
-  border-style: solid;
+.item_block_container {
+  width: 22%;
+}
 
-  &:hover {
-    transform: scale(1.01);
-    box-shadow: 0 0 3px #515151;
+@for $i from 1 through $navNumOfItemBlocks {
+  .left_item#{$i} {
+    height: 1px;
+    z-index: 5;
+    border-right: 2px solid #921c06;
   }
 }
 
-.left_item {
-  width: 150px;
-  height: 150px;
-  border-right: 2px solid black;
+@for $i from 1 through $navNumOfItemBlocks {
+  .right_image#{$i} {
+    height: 1px;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: cover;
+  }
 }
 
-.right_image {
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: cover;
+@keyframes grow {
+  from {
+    height: 0px;
+  }
+  to {
+    height: 10rem;
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes shrink {
+  from {
+    height: 10rem;
+  }
+  to {
+    height: 0px;
+  }
 }
 
 //Possible arrow?
